# rinha-rust-2026

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  info.json  nginx.conf
resources/: mcc_risk.json  normalization.json
scripts/: load-test.sh
src/: main.rs
src/database/: mod.rs  simd.rs  vectordb.rs
src/handlers/: fraud_score_handler.rs  load_score_handler.rs  mod.rs
src/models/: fraud_load_vector.rs  fraud_score_request.rs  fraud_score_response.rs  mod.rs  normalization.rs
src/normalizers/: mod.rs  normalize_data.rs  static_values.rs
