[package]
name = "rinha-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
flate2 = "1"
memmap2 = "0.9"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
